Refactor SecurityConfig for CORS and security settings
Refactor CORS configuration to use allowed origin patterns from properties. Update security filter chain and clean up commented code.