@@ -1,7 +1,69 @@
+// package com.ezdrive.ezdrive.config;
+
+// import java.util.List;
+
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+// @Configuration
+// public class SecurityConfig {
+
+//     @Bean
+//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//         http
+//             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//             .csrf(csrf -> csrf.disable())
+//             .authorizeHttpRequests(auth -> auth
+//                 .requestMatchers(
+//                     "/api/auth/**",
+//                     "/api/otp/**",
+//                     "/api/user/me",
+//                     "/api/game-sessions/**",
+//                     "/api/profile/**",
+//                     "/api/ranking/**",
+//                     "/game-sessions/**",
+//                     "/game-sessions/startMemory",
+//                     "/swagger-ui/**",
+//                     "/swagger-ui.html",
+//                     "/v3/api-docs/**",
+//                     "/question/xml",
+//                     "/agent/**"
+//                 ).permitAll()
+//                 .anyRequest().authenticated()
+//             )
+//             .sessionManagement(session -> session
+//                 .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
+//             )
+//             .formLogin(form -> form.disable())
+//             .httpBasic(httpBasic -> httpBasic.disable());
+
+//         return http.build();
+//     }
+
+//     @Bean
+//     public CorsConfigurationSource corsConfigurationSource() {
+//         CorsConfiguration configuration = new CorsConfiguration();
+//         configuration.setAllowCredentials(true); // מאפשר שליחת עוגיות (session)
+//         configuration.setAllowedOrigins(List.of("http://localhost:3000")); // הדומיין של React
+//         configuration.setAllowedHeaders(List.of("*"));
+//         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//         source.registerCorsConfiguration("/**", configuration);
+//         return source;
+//     }
+// }
+
 package com.ezdrive.ezdrive.config;
 
-import java.util.List;
-
+import java.util.Arrays;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -13,6 +75,10 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
 public class SecurityConfig {
+
+    // נקרא מה-properties/ENV
+    @Value("${app.cors.allowed-origin-patterns}")
+    private String allowedOriginPatternsCsv;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -37,9 +103,7 @@ public class SecurityConfig {
                 ).permitAll()
                 .anyRequest().authenticated()
             )
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
-            )
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
             .formLogin(form -> form.disable())
             .httpBasic(httpBasic -> httpBasic.disable());
 
@@ -48,14 +112,15 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowCredentials(true); // מאפשר שליחת עוגיות (session)
-        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // הדומיין של React
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        CorsConfiguration cfg = new CorsConfiguration();
+        cfg.setAllowCredentials(true); 
+        cfg.setAllowedOriginPatterns(Arrays.asList(allowedOriginPatternsCsv.split("\\s*,\\s*")));
+        cfg.setAllowedHeaders(Arrays.asList("*"));
+        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", cfg);
         return source;
     }
 }
+
